--- a/Londing Housing Data.ipynb
+++ b/Londing Housing Data.ipynb
@@ -49,6 +49,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<img src=\"image1_1Smpxfn.jpg\" width=\"600\" height=\"400\" align=\"center\"/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Based on the dataset, we will work on answering the following Questions:"
    ]
   },
@@ -75,6 +82,7 @@
    "outputs": [],
    "source": [
     "# Import required packages\n",
+    "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib\n",
@@ -435,6 +443,13 @@
    "metadata": {},
    "source": [
     "## Exploratory_Data_Analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"istockphoto-1186618062-612x612.jpg\" width=\"700\" height=\"400\" align=\"center\"/>"
    ]
   },
   {
